# gh-workflow

./: LICENSE  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: backend-lint.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
